refactor(flora-root)@codebuddy: syntax包应用Java 26新特性（getFirst/clamp/匿名参数_/assertInstanceOf）并清理未使用字段与Tokenizer.PLAIN，ExprParser加@SuppressWarnings消除无限递归误报.